--- a/OpenAI-VectorStore2/OpenAI-VectorStore2.csproj
+++ b/OpenAI-VectorStore2/OpenAI-VectorStore2.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
     <PackageReference Include="OpenAI" Version="1.11.0" />
+    <PackageReference Include="RestSharp" Version="112.0.0" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Controllers\" />
