OpenAI API Key hidden

--- a/OpenAI-VectorStore2/appsettings.json
+++ b/OpenAI-VectorStore2/appsettings.json
@@ -1,4 +1,9 @@
 ﻿{
+
+  "OpenAI": {
+    "ApiKey": "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"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
